@@ -1,1 +1,0 @@
-Python API library for common path and pattern functionality.
