@@ -1,17 +1,0 @@
-# $NetBSD: Makefile,v 1.4 2022/01/04 20:54:48 wiz Exp $
-
-DISTNAME=	pathtools-0.1.2
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
-CATEGORIES=	sysutils python
-MASTER_SITES=	${MASTER_SITE_PYPI:=p/pathtools/}
-
-MAINTAINER=	kamelderouiche@yahoo.com
-HOMEPAGE=	https://github.com/gorakhargosh/pathtools
-COMMENT=	File system general utilities
-LICENSE=	mit
-
-USE_LANGUAGES=	# none
-
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
