@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.6669 2023/11/05 22:04:36 schmonz Exp $
+$NetBSD: CHANGES-2023,v 1.6670 2023/11/05 22:14:08 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -9660,3 +9660,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated devel/ocaml-dune-configurator to 3.11.1 [jaapb 2023-11-05]
 	Updated devel/ocaml-lwt to 5.7.0 [jaapb 2023-11-05]
 	Updated devel/swagger-codegen to 3.0.50 [schmonz 2023-11-05]
+	Removed sysutils/py-pathtools [wiz 2023-11-05]
